--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "dynamic_radio",
   "version": "1.0.0",
   "description": "Dynamic Radio",
-  "main": "index.js",
+  "main": "public/bundle.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "webpack-dev-server"
   },
   "repository": {
     "type": "git",
@@ -26,8 +27,14 @@
     "babel-loader": "^6.2.0",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
+    "firebase": "^2.3.2",
+    "history": "^1.17.0",
     "react": "^0.14.5",
     "react-dom": "^0.14.5",
-    "webpack": "^1.12.9"
+    "react-mixin": "^3.0.3",
+    "react-router": "^1.0.3",
+    "reactfire": "^0.5.1",
+    "webpack": "^1.12.9",
+    "webpack-dev-server": "^1.14.0"
   }
 }
