--- a/package.json
+++ b/package.json
@@ -23,21 +23,22 @@
   },
   "homepage": "https://github.com/tyloslinger/dynamicRadio#readme",
   "dependencies": {
-    "babel-core": "^6.3.26",
-    "babel-loader": "^6.2.0",
+    "babel-core": "^6.4.0",
+    "babel-loader": "^6.2.1",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "firebase": "^2.3.2",
+    "flux": "^2.1.1",
     "history": "^1.17.0",
-    "react": "^0.14.5",
-    "react-dom": "^0.14.5",
+    "react": "^0.14.6",
+    "react-dom": "^0.14.6",
     "react-dropzone": "^3.3.0",
     "react-mixin": "^3.0.3",
     "react-router": "^1.0.3",
     "reactfire": "^0.5.1",
     "superagent": "^1.6.1",
     "underscore": "^1.8.3",
-    "webpack": "^1.12.9",
+    "webpack": "^1.12.11",
     "webpack-dev-server": "^1.14.0"
   }
 }
