--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "public/bundle.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack-dev-server"
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -27,17 +27,26 @@
     "babel-loader": "^6.2.1",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
+    "classnames": "^2.2.3",
+    "css-loader": "^0.23.1",
+    "express": "^4.13.3",
+    "file-loader": "^0.8.5",
     "firebase": "^2.3.2",
     "flux": "^2.1.1",
     "history": "^1.17.0",
+    "node-sass": "^3.4.2",
+    "path": "^0.12.7",
     "react": "^0.14.6",
     "react-dom": "^0.14.6",
     "react-dropzone": "^3.3.0",
     "react-mixin": "^3.0.3",
     "react-router": "^1.0.3",
     "reactfire": "^0.5.1",
+    "sass-loader": "^3.1.2",
+    "style-loader": "^0.13.0",
     "superagent": "^1.6.1",
     "underscore": "^1.8.3",
+    "url-loader": "^0.5.7",
     "webpack": "^1.12.11",
     "webpack-dev-server": "^1.14.0"
   }
