--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "superagent": "^1.6.1",
     "underscore": "^1.8.3",
     "url-loader": "^0.5.7",
+    "uuid": "^2.0.1",
     "webpack": "^1.12.11",
     "webpack-dev-server": "^1.14.0"
   }
